# newappidea

./: README.MD  main.py  posted_links  pyproject.toml  run.bat
